# Hooky

./: .gitignore  README.md  repo.toml
.github/workflows/: update.yml
command/: Cargo.toml  index.html  style.css
command/public/: glue.js  main.js
command/src/: app.rs
command/src-tauri/: Cargo.toml  tauri.conf.json
command/src-tauri/icons/: icon.icns
command/src-tauri/src/: main.rs
config/: Cargo.toml
config/src/: lib.rs
data/: Cargo.toml
data/src/: lib.rs
data/src/all_data/: discord.rs  discord_chromium.rs  discord_client.rs  discord_client.rs.rs  discord_firefox.rs
victim/: Cargo.toml  build.rs  run
victim/src/: data.rs  main.rs  payload.rs  send.rs
victim/src/all_data/: discord_client.rs  mod.rs
