[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
fancy-regex = { version = "0.10.0", optional = true }

[features]
functions = []
discord-chromium = ["functions"]
discord-firefox = ["functions"]
discord-client = ["functions", "dep:fancy-regex"]
