[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"

[features]
functions = []
discord = [
    "functions",
    "dep:aes-gcm",
    "dep:base64",
    "dep:regex",
    "dep:serde_json",
    "dep:winapi",
    "winapi?/dpapi",
    "winapi?/winbase"
]

[target.'cfg(target_os = "windows")'.dependencies]
aes-gcm = { version = "0.10.1", optional = true }
base64 = { version = "0.20.0", optional = true }
regex = { version = "1.7.0", optional = true }
serde_json = { version = "1.0.91", optional = true }
winapi = { version = "0.3.9", optional = true }
