[package]
name = "victim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = "1.0.152"
serde_derive = "1.0.152"
tempfile = { version = "3.3.0", optional = true }
config = { path = "../config" }
data = { path = "../data", features = ["functions"] }

[build-dependencies]
toml = "0.5.10"
config = { path = "../config" }

[features]
payload = ["dep:tempfile"]
discord = ["data/discord"]
